tests/algorithms/x/Java/graphs/tests/test_min_spanning_tree_prim.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden455_test_min_spanning_tree_prim3024287344/001/Main.java:31: error: incompatible types: int cannot be converted to Long
visited.put(0, true);
            ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error
